# find-my-files

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FindMyFiles.slnx  LICENSE  README.md  _typos.toml  committed.toml  justfile  lefthook.yml  mise.toml  osv-scanner.toml  release-please-config.json  rustfmt.toml  taplo.toml
.config/: dotnet-tools.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labels.json  labels.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: README.md  protect-default-branch.json  protect-version-tags.json
.github/workflows/: cargo-audit.yml  ci.yml  codeql.yml  fuzz.yml  labels-sync.yml  mise-outdated.yml  mutants.yml  nightly-admin.yml  nightly.yml  no-automerge-on-release-pr.yml  pages.yml  release-label-guard.yml  release-please.yml  release.yml  sbom-monitor.yml  scorecard.yml
app/FindMyFiles/: App.xaml  App.xaml.cs  AssemblyAttributes.cs  FindMyFiles.csproj  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  app.manifest  packages.lock.json
app/FindMyFiles.Tests/: AppReloadTests.cs  AppSettingsErrorTests.cs  AppSettingsTests.cs  AssemblyAttributes.cs  BuildInfoTests.cs  DiagFormatTests.cs  EngineClientFactoryMatrixTests.cs  EngineClientFactoryTests.cs  EngineEventMarshalerTests.cs  EventMarshalingNotificationTests.cs  ExceptionPolicyTests.cs  FileLogTests.cs  FindMyFiles.Tests.csproj  FocusedQueryRewriterTests.cs  HighlightSegmenterTests.cs  LocTestInit.cs  LogfmtFormatterTests.cs  MainViewModelConnectionTests.cs  MainViewModelEventTests.cs  MainViewModelSearchFailureTests.cs  MainViewModelTests.cs  MatchHighlighterTests.cs  NativeEngineBindingTests.cs  NotificationCenterTests.cs  PackageIdentityTests.cs  PageCodecTests.cs  PerfPanelViewModelTests.cs  PipeConnectionStateMachineSpecTests.cs  PipeConnectionTests.cs  PipeEngineClientTests.cs  PipeEngineClientWarmupTests.cs  PipeIntegrationTests.cs  PipeProtocolTests.cs  PipeServerIdentityTests.cs  ResultRowTests.cs  ResultsPresenterTests.cs  ResultsViewportManagerTests.cs  ResultsVirtualizationEdgeTests.cs  ScopePathsTests.cs  ScopeSetupTests.cs  (+18 more)
contract/golden/: invalid_queries.json  manifest.json  query_trace.json  stats_snapshot.json
docfx/: docfx.json  index.md  toc.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MANUAL_SMOKE.md  RELEASING.md  RESEARCH.md  SCORECARD.md  SECURITY.md  SIGNING.md  SUMMARY.md  SUPPLY_CHAIN.md  TROUBLESHOOTING.md  book.toml  cli.md  contract.md
docs/adr/: 0001-filename-only-index.md  0002-linear-sweep-no-trigram.md  0003-wtf8-length-preserving-fold.md  0004-fold-overflow-name-layout.md  0005-frn-index-sorted-permutation.md  0006-lazy-sort-permutations.md  0007-size-u32-overflow.md  0008-insertion-point-batch-merge.md  0009-compaction-order-preserving-remap.md  0010-snapshot-raw-pod-no-compat.md  0011-scan-streaming-pipeline.md  0012-default-allocator-record-arena.md  0013-measurement-discipline.md  0014-build-tooling-rejections.md  0015-winui-data-virtualization.md  (+27 more)
engine/: CHANGELOG.md  Cargo.toml  about.hbs  about.toml  bacon.toml  clippy.toml  deny.toml  mutants.toml
engine/.cargo/: config.toml
engine/benches/: README.md  baseline.json
engine/crates/fmf-buildstamp/: Cargo.toml  build.rs
engine/crates/fmf-buildstamp/src/: lib.rs
engine/crates/fmf-cli/: Cargo.toml
engine/crates/fmf-cli/examples/: codegen.rs
engine/crates/fmf-cli/src/: bench_support.rs  lib.rs  main.rs
engine/crates/fmf-cli/src/cmd/: bench.rs  completions.rs  criterion_gate.rs  ctx.rs  diag.rs  exit.rs  index.rs  io_probe.rs  json.rs  mod.rs  stats.rs  term.rs
engine/crates/fmf-cli/tests/: cli.rs  cli_docs_drift.rs
engine/crates/fmf-contract/: Cargo.toml
engine/crates/fmf-contract/src/: codes.rs  counters.rs  events.rs  lib.rs  limits.rs  opcodes.rs  options.rs  pod.rs  versions.rs  volume.rs
engine/crates/fmf-contract/tests/: drift.rs
engine/crates/fmf-core/: Cargo.toml
engine/crates/fmf-core/benches/: search.rs
engine/crates/fmf-core/src/: diag.rs  engine.rs  index.rs  lib.rs  metrics.rs  mft.rs  scan.rs  wtf8.rs
engine/crates/fmf-core/src/engine/: mod.rs  results.rs  seams.rs  search.rs  tests.rs  volume.rs  watch.rs  worker.rs  worker_tests.rs
engine/crates/fmf-core/src/index/: builder.rs  compact.rs  core.rs  frn.rs  mod.rs  mutate.rs  snapshot.rs  testutil.rs
engine/crates/fmf-core/src/query/: ast.rs  compile.rs  dates.rs  exec.rs  matchers.rs  memo.rs  mod.rs  subsume.rs  sweep.rs
engine/crates/fmf-core/src/scan/: deferred.rs  mod.rs  parse.rs  pipeline.rs  probe.rs  volume_io.rs  walk.rs  walk_id.rs
engine/crates/fmf-core/src/usn/: apply.rs  mod.rs  records.rs  session.rs
engine/crates/fmf-core/tests/: golden_json.rs  usn_replay.rs
engine/crates/fmf-ffi/: Cargo.toml  clippy.toml
engine/crates/fmf-ffi/src/: blob.rs  contract_tests.rs  error.rs  events.rs  handle.rs  lib.rs  results.rs  volumes.rs
engine/crates/fmf-launcher/: Cargo.toml  build.rs
engine/crates/fmf-launcher/src/: main.rs
engine/crates/fmf-proto/: Cargo.toml
engine/crates/fmf-proto/src/: frame.rs  lib.rs  messages.rs
engine/crates/fmf-proto/tests/: golden.rs
engine/crates/fmf-service/: Cargo.toml  clippy.toml
engine/crates/fmf-service/src/: config.rs  dispatch.rs  events.rs  faults.rs  host.rs  lib.rs  lifecycle.rs  main.rs  pipe.rs  security.rs  server.rs  svc.rs
engine/crates/fmf-service/tests/: idle_stop.rs  pipe_loopback.rs  service_admin.rs
engine/fuzz/: Cargo.toml  README.md
engine/fuzz/fuzz_targets/: frame_decode.rs  index_snapshot.rs  message_decode.rs  query_parse.rs  usn_records.rs  wtf8_decode.rs
site/: index.html  style.css
xtask/: Cargo.toml  README.md  clippy.toml
xtask/.cargo/: config.toml
xtask/src/: checksum.rs  clean.rs  cmd.rs  csharp_docs.rs  docs.rs  doctor.rs  fsx.rs  locale.rs  main.rs  msix.rs  notices.rs  package.rs  paths.rs  prune.rs  publish.rs  release.rs  semver.rs  signing.rs  test_admin.rs  version.rs
xtask/src/version/: cargo_toml.rs  csproj.rs
(+147 files in other folders)
