[workspace]
resolver = "2"
members = [
  "crates/fmf-contract",
  "crates/fmf-core",
  "crates/fmf-ffi",
  "crates/fmf-cli",
  "crates/fmf-proto",
  "crates/fmf-service",
]

[workspace.package]
version = "0.1.0" # x-release-please-version
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/P4suta/find-my-files"

[workspace.dependencies]
fmf-contract = { path = "crates/fmf-contract" }
fmf-core = { path = "crates/fmf-core" }
fmf-proto = { path = "crates/fmf-proto" }
ntfs-reader = "0.4"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Services",
  "Win32_System_Ioctl",
  "Win32_System_IO",
  "Win32_System_Pipes",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_System_Time",
  "Win32_Security",
  "Win32_Security_Authorization",
] }
# SCM integration for fmf-service only (Mullvad's maintained wrapper).
windows-service = "0.8"
memchr = "2"
rustc-hash = "2"
rayon = "1"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
regex = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Engine is always built/measured in release; keep stack traces usable.
# codegen-units=1 keeps hot-path inlining independent of module layout
# (ADR-0014).
[profile.release]
debug = "line-tables-only"
lto = "thin"
codegen-units = 1

# Profiling builds (just profile): identical machine code to release — only
# the debuginfo is upgraded to full so samply resolves inlined frames.
[profile.profiling]
inherits = "release"
debug = true
