# Dev-task runner for find-my-files (the cargo-xtask pattern).
#
# Deliberately its OWN single-crate workspace, NOT a member of engine/: the
# daily loop and CI gates run `cargo {check,clippy,doc} --workspace` and
# `cargo llvm-cov --workspace --fail-under-lines 70` against engine/, and a
# member here would pollute the coverage denominator and lint/doc surface.
# Invoked via `cargo run --manifest-path xtask/Cargo.toml -- <cmd>` (just hides
# this). Holds the imperative build/release plumbing that used to live as
# inline PowerShell in justfile / the GitHub workflows.
[workspace]

[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

# Mirrors the engine workspace's maximal lint policy (engine/Cargo.toml). xtask
# is a separate workspace, so the policy is restated here. publish=false build
# tooling: the cargo-group metadata lints get justified allows during triage.
[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Same justified exemptions as the engine workspace (see engine/Cargo.toml for the
# reasoning). Everything else stays deny and is fixed in code.
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
module_name_repetitions = "allow"
used_underscore_binding = "allow"
significant_drop_tightening = "allow"
significant_drop_in_scrutinee = "allow"
option_if_let_else = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
# Curated restriction lints — mirror engine/Cargo.toml (see there for the rationale).
unwrap_used = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
mem_forget = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
mutex_atomic = "deny"
lossy_float_literal = "deny"
verbose_file_reads = "deny"
try_err = "deny"
empty_structs_with_brackets = "deny"
unnecessary_self_imports = "deny"
if_then_some_else_none = "deny"
wildcard_dependencies = "deny"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml_edit = "0.25"
regex = "1"
# deflate only — drops the bzip2/zstd C deps so xtask builds clean on the
# ubuntu CI lane (and everywhere) without a C toolchain.
zip = { version = "8", default-features = false, features = ["deflate"] }
sha2 = "0.11"

# This is build tooling, not a hot path: optimize for fast compiles, not fast
# runtime. (The engine workspace is the opposite — see engine/Cargo.toml.)
[profile.release]
lto = false
codegen-units = 16
opt-level = 1
