# cargo-fuzz harnesses for the untrusted-input parsers, fuzzed on the Linux CI
# runner. Two surfaces:
#   - the named-pipe wire codec (fmf-proto / fmf-contract) — the privilege
#     boundary (non-elevated UI -> elevated fmf-service, docs/SECURITY.md);
#   - the fmf-core decoders (query / index::snapshot / usn::records / wtf8) —
#     now reachable because fmf-core's Windows deps (ntfs-reader / windows-sys)
#     are `cfg(windows)`-gated, so its pure parsers build for Linux.
# All are proptest-covered in-tree too; libFuzzer adds coverage-guided
# exploration with ASan over the same surfaces.
[package]
name = "fmf-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# fmf-contract is reached through fmf-proto (not named directly), so it is not a
# direct dependency — cargo-machete would flag it as unused otherwise.
[dependencies]
libfuzzer-sys = "0.4"
fmf-proto = { path = "../crates/fmf-proto" }
fmf-core = { path = "../crates/fmf-core" }

# Crash traces over speed; cargo-fuzz already enables debug-assertions +
# overflow-checks, so arithmetic on attacker-controlled lengths is caught.
[profile.release]
debug = true

[[bin]]
name = "frame_decode"
path = "fuzz_targets/frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "message_decode"
path = "fuzz_targets/message_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "query_parse"
path = "fuzz_targets/query_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "index_snapshot"
path = "fuzz_targets/index_snapshot.rs"
test = false
doc = false
bench = false

[[bin]]
name = "usn_records"
path = "fuzz_targets/usn_records.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wtf8_decode"
path = "fuzz_targets/wtf8_decode.rs"
test = false
doc = false
bench = false

# Standalone workspace (mirrors xtask, ADR-0018): keeps fmf-fuzz out of the
# engine workspace so `cargo --workspace` / llvm-cov never build the nightly,
# CI-only fuzz crate.
[workspace]
