[package]
name = "fmf-buildstamp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

# No dependencies on purpose: this is a leaf depended on ONLY by the front-end
# binaries (fmf-cli, fmf-service). Keeping fmf-core / fmf-ffi off this crate
# preserves the no-logic boundary AND keeps the build.rs `.git/HEAD` rerun from
# rippling a rebuild into the hot engine crates.
