[package]
name = "fmf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "fmf"
path = "src/main.rs"

[dependencies]
fmf-core = { workspace = true }
fmf-contract = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anstream = { workspace = true }
anstyle = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
clap_complete = { workspace = true }
clap-markdown = { workspace = true }
