[package]
name = "fmf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "fmf"
path = "src/main.rs"

[dependencies]
fmf-core = { workspace = true }
fmf-contract = { workspace = true }
fmf-buildstamp = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anstream = { workspace = true }
anstyle = { workspace = true }
indicatif = { workspace = true }
# Shell-completion generation: used by the `completions` subcommand (shipped) and
# the codegen example, both rendering from the single clap command tree.
clap_complete = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
clap-markdown = { workspace = true }
# So the CLI tests can pin `diag`'s reported version to the build identity.
fmf-buildstamp = { workspace = true }
