[package]
name = "fmf-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ntfs-reader = { workspace = true }
windows-sys = { workspace = true }
memchr = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
xxhash-rust = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = "0.5"
# Golden JSON-shape pins (tests/golden_json.rs) — the serde output consumed
# by the C# side is contract surface (ADR-0018).
serde_json = { workspace = true }

[[bench]]
name = "search"
harness = false
