[package]
name = "fmf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
fmf-contract = { workspace = true }
ntfs-reader = { workspace = true }
windows-sys = { workspace = true }
memchr = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
xxhash-rust = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }

[features]
# Exposes index::testutil (TestDir RAII + sample-index builders) to the
# other workspace crates' test suites via their dev-dependencies. Never
# enabled by production builds.
testutil = []

[dev-dependencies]
criterion = "0.8"
# Golden JSON-shape pins (tests/golden_json.rs) — the serde output consumed
# by the C# side is contract surface (ADR-0018).
serde_json = { workspace = true }

[[bench]]
name = "search"
harness = false
