[package]
name = "fmf-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# DLL name is fixed: fmf_engine.dll, paired with [LibraryImport("fmf_engine")] in C#.
[lib]
name = "fmf_engine"
crate-type = ["cdylib"]

[dependencies]
fmf-core = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# The pipe protocol duplicates the error-code table (a cdylib cannot be a
# dependency); this pin keeps the copies from drifting (contract_tests).
fmf-proto = { workspace = true }
