[package]
name = "fmf-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# DLL name is fixed: fmf_engine.dll, paired with [LibraryImport("fmf_engine")] in C#.
[lib]
name = "fmf_engine"
crate-type = ["cdylib"]

[dependencies]
# A cdylib can depend on rlibs just fine (the old "cannot depend" comment
# was a Cargo misconception — ADR-0018); the contract is the single source.
fmf-contract = { workspace = true }
fmf-core = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
