[package]
name = "fmf-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Only for the GUI error box on the (rare) "app\ is missing" path — under the
# `windows` subsystem there is no console, so a message box is the only way not
# to fail silently ("黙らない").
windows-sys = { workspace = true, features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
# Embeds the app icon so the bundle's top-level FindMyFiles.exe looks identical
# to the app it starts. Build-time only — never reaches the shipped binary.
winresource = "0.1"
