[package]
name = "fmf-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fmf-core = { workspace = true }
fmf-proto = { workspace = true }
clap = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
windows-sys = { workspace = true }
