[package]
name = "fmf-service"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
fmf-core = { workspace = true }
fmf-proto = { workspace = true }
clap = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
windows-service = { workspace = true }
windows-sys = { workspace = true }

[dev-dependencies]
# Test-only feature union: exposes fmf-core's index::testutil (TestDir RAII)
# to the integration tests without touching the production build.
fmf-core = { workspace = true, features = ["testutil"] }
